--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--Link a archivos CSS de Bootstrap-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Grid y estructura</title>
+    <title>Grid y estructuras</title>
 </head>
 
 <body>
